vlib/v/checker/tests/mod_op_wrong_right_type_err_c.out
vlib/v/checker/tests/mod_op_wrong_right_type_err_c.v:4:6: error: mismatched types `any_int` and `Aaa`
    2 | fn main() {
    3 |     a := Aaa{}
    4 |     1 % a
      |         ^
    5 | }
