vlib/v/checker/tests/mod_op_wrong_right_type_err_c.vv
struct Aaa{}
fn main() {
	a := Aaa{}
	1 % a
}
